added github link

--- a/covid_map.ipynb
+++ b/covid_map.ipynb
@@ -553,15 +553,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to see the jupyter notebook that generated this its available [on my github](link)."
+    "If you want to see the jupyter notebook that generated this its available [on my github](https://github.com/jrussell25/cartography/blob/master/covid_map.ipynb)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
