see if latex was the problem...

--- a/covid_map.ipynb
+++ b/covid_map.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,10 +10,9 @@
     "import matplotlib.pyplot as plt\n",
     "import bqplot.pyplot as bqplt\n",
     "import matplotlib as mpl\n",
-    "import glob\n",
     "#mpl.style.use('default')\n",
     "#These are some matplot lib configurations that I like to use. \n",
-    "mpl.rc(\"text\", usetex=True) #if tou have Latex set this to true and matplotlib will render labels in latex\n",
+    "#mpl.rc(\"text\", usetex=True) #if tou have Latex set this to true and matplotlib will render labels in latex\n",
     "mpl.rc(\"font\", family = \"serif\") #Serif font in matplotlib\n",
     "mpl.rc(\"figure\",figsize=(9,6)) #Increase default figure size\n",
     "%config InlineBackend.figure_format = 'retina' #If you have a high res display, render the plots more nicely\n",
