Fixed some typos

--- a/covid_map.ipynb
+++ b/covid_map.ipynb
@@ -316,7 +316,7 @@
    "source": [
     "### Here states are colored by their current per capita death rates.\n",
     "\n",
-    "You can mouseover the states to see their current rates (updated 4/12/20) and the projections from the IHME for August 1, 2020. Rates are given in deaths per $10^4$ people. Unforuntely I havent been able to display a colorbar yet but blue corresponds to higher values and yellow to lower ones. Wyoming currently has 0 so and New York has the most for reference.\n",
+    "You can mouseover the states to see their current rates (updated 4/12/20) and the projections from the IHME for August 1, 2020. Rates are given in deaths per $10^4$ people. Unfortuntely I havent been able to display a colorbar yet but blue corresponds to higher values and yellow to lower ones. Wyoming currently has 0 so and New York has the most for reference.\n",
     "\n",
     "If you click on a state, its IHME data will appear on the plot below. The solid line is the model average and the dashed lines indiciate the upper and lower bounds from the model."
    ]
@@ -400,9 +400,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Here state are colored by the fraction of projected per captita deaths that have yet to occur.\n",
+    "### Here states are colored by the fraction of projected per capita deaths that have yet to occur.\n",
     "\n",
-    "It a little clunky but if you click here it will also update the graph above (hopefully I'll make this better soon)."
+    "It's a little clunky but if you click here it will also update the graph above (hopefully I'll make this better soon)."
    ]
   },
   {
@@ -433,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It took me a while to learn how to make this all interactive and available but I will try to add any other cool maps as I make them. Before I started making interactive ones I took a look at the correlation of COVID deaths and political affiliation. Turns out that the previous map, fraction of projected deaths yet to come looks a lot like the results of the 2016 election. Ill leave you with a couple scatter plots to show what I mean."
+    "It took me a while to learn how to make this all interactive and available but I will try to add any other cool maps as I make them. Before I started making interactive ones I took a look at the correlation of COVID deaths and political affiliation. Turns out that the previous map, fraction of projected deaths yet to come, looks a lot like the results of the 2016 election. Ill leave you with a couple scatter plots to show what I mean."
    ]
   },
   {
